# gStampnote

./: .gitignore  README.md  com.github.xpaul.gstampnote.json  meson.build
data/: com.github.xpaul.gstampnote.appdata.xml.in  com.github.xpaul.gstampnote.desktop.in  com.github.xpaul.gstampnote.gschema.xml  gstampnote.gresource.xml  meson.build
po/: POTFILES  meson.build
src/: Application.vala  Controller.vala  Window.vala  config.vala.in  meson.build
src/Models/: Note.vala  Summary.vala
src/Services/: CsvSerDe.vala
src/Widgets/: Content.vala  HeaderBar.vala  SideBar.vala
